@@ -1,6 +1,7 @@
 SUBDIRS = gnome test-suite examples 
 
-EXTRA_DIST = guile-gnome-glib.pc.in guile-gnome-glib-uninstalled.pc.in
+EXTRA_DIST = guile-gnome-glib.pc.in guile-gnome-glib-uninstalled.pc.in \
+	guile-gnome-defs.pc.in guile-gnome-defs-uninstalled.pc.in \
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = guile-gnome-glib.pc
+pkgconfig_DATA = guile-gnome-glib.pc guile-gnome-defs.pc
