@@ -1,3 +1,7 @@
+2004-09-06  Andy Wingo  <wingo@pobox.com>
+
+	* Makefile.am: Install the -defs pkg-config file.
+
 2004-09-05  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gobject/Makefile.am (CLEANFILES): Clean the .x files.
